overflow hidden, z-index fix

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 	background: linear-gradient(55.96deg, #3A338A 21.39%, #C42F72 100%);
 	font-family: system-ui, sans-serif;
 	height: 100vh;
+	overflow: hidden;
 }
 
 header {
@@ -36,7 +37,7 @@ main {
 	margin: 0 auto;
 	width: 89.453125vw;
 	height: 85.507246376811594vh; /* 1593px */
-	background-color: grey;
+	background-color: black;
 	border-radius: 3.25520833vw;
 	display: flex;
 	flex-direction: column;
@@ -85,7 +86,7 @@ form {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	z-index: 1;
+	z-index: 0;
 }
 
 /* label {
